cmake_minimum_required(VERSION 3.10)

project(leetcode_cpp)
set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_BUILD_TYPE "DEBUG")
# set(CMAKE_CXX_FLAGS "-ggdb -Wall")
add_subdirectory(src)
add_subdirectory(templates)
add_subdirectory(others)
add_subdirectory(compete)
# add_subdirectory(hot100)
add_subdirectory(tests)