add_executable(question66 question66.cpp)
add_executable(question88 question88.cpp)
add_executable(question118 question118.cpp)
add_executable(question119 question119.cpp)
add_executable(question121 question121.cpp)
add_executable(question136 question136.cpp)
add_executable(question167 question167.cpp)
add_executable(question169 question169.cpp)
add_executable(question204 question204.cpp)
add_executable(question11 question11.cpp)
add_executable(question15 question15.cpp)
add_executable(question16 question16.cpp)
add_executable(question31 question31.cpp)
add_executable(question33 question33.cpp)
add_executable(question34 question34.cpp)
add_executable(question39 question39.cpp)
add_executable(question40 question40.cpp)
add_executable(question45 question45.cpp)
add_executable(question48 question48.cpp)
add_executable(question64 question64.cpp)
add_executable(question74 question74.cpp)
add_executable(question75 question75.cpp)
add_executable(question2 question2.cpp)
add_executable(question17 question17.cpp)
add_executable(question19 question19.cpp)
add_executable(question62 question62.cpp)
add_executable(question78 question78.cpp)
add_executable(question198 question198.cpp)
add_executable(question102 question102.cpp)
add_executable(question22 question22.cpp)
add_executable(question46 question46.cpp)
add_executable(question20 question20.cpp)
add_executable(question21 question21.cpp)
add_executable(question55 question55.cpp)
add_executable(question56 question56.cpp)
add_executable(question70 question70.cpp)
add_executable(question347 question347.cpp)
add_executable(question394 question394.cpp)
add_executable(question399 question399.cpp)
add_executable(question238 question238.cpp)
add_executable(question739 question739.cpp)
add_executable(question128 question128.cpp)
add_executable(question139 question139.cpp)
add_executable(question141 question141.cpp)
add_executable(question215 question215.cpp)
add_executable(question279 question279.cpp)
add_executable(question283 question283.cpp)
add_executable(question206 question206.cpp)
add_executable(question287 question287.cpp)
add_executable(question322 question322.cpp)